--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "oasis",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "bankai build index.js",
-    "create": "choo-scaffold",
-    "inspect": "bankai inspect index.js",
-    "start": "bankai start index.js",
-    "test": "standard && npm run test-deps",
-    "test-deps": "dependency-check . && dependency-check . --extra --no-dev -i tachyons"
-  },
+  "main": "index.js",
+  "author": "Christian Bundy <christianbundy@fraction.io>",
+  "license": "MIT",
   "dependencies": {
-    "choo": "^6.13.3",
-    "choo-service-worker": "^3.0.0",
-    "sheetify": "^7.4.0",
-    "tachyons": "^4.11.1"
-  },
-  "devDependencies": {
-    "bankai": "^9.15.0",
-    "choo-devtools": "^3.0.0",
-    "choo-scaffold": "^1.2.0",
-    "dependency-check": "^3.3.0",
-    "standard": "^12.0.1"
+    "ejs": "^2.6.2",
+    "handlebars": "^4.1.2",
+    "hbs": "^4.0.4",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
+    "koa-views": "^6.2.0",
+    "lodash": "^4.17.11",
+    "pretty-ms": "^5.0.0",
+    "pull-stream": "^3.6.12",
+    "ssb-client": "^4.7.7",
+    "ssb-markdown": "^5.0.1",
+    "swig": "^1.4.2"
   }
 }
