--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.2",
-    "handlebars": "^4.1.2",
-    "hbs": "^4.0.4",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "koa-views": "^6.2.0",
@@ -15,12 +13,19 @@
     "pretty-ms": "^5.0.0",
     "pull-stream": "^3.6.12",
     "ssb-client": "^4.7.7",
-    "ssb-markdown": "^5.0.1",
-    "swig": "^1.4.2"
+    "ssb-markdown": "^5.0.1"
   },
   "bin": {
     "oasis": "./index.js"
   },
   "description": "friendly neighborhood scuttlebutt interface",
-  "repository": "git@github.com:fraction/oasis.git"
+  "repository": "git@github.com:fraction/oasis.git",
+  "devDependencies": {
+    "dependency-check": "^3.3.0",
+    "ejs-lint": "^0.3.0",
+    "standard": "^12.0.1"
+  },
+  "scripts": {
+    "test": "standard && dependency-check ./package.json --unused --no-dev --ignore ejs && ejslint **/*.html"
+  }
 }
