--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.6.2",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "lodash": "^4.17.11",
     "pretty-ms": "^5.0.0",
