Add syntax highlighting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.2",
+    "highlight.js": "^9.15.8",
     "koa": "^2.7.0",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
