--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "author": "Christian Bundy <christianbundy@fraction.io>",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.6.2",
     "highlight.js": "^9.15.8",
+    "hyperaxe": "^1.3.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.2.0",
     "lodash": "^4.17.11",
     "open": "^6.3.0",
     "pretty-ms": "^5.0.0",
@@ -29,11 +28,10 @@
   "repository": "git@github.com:fraction/oasis.git",
   "devDependencies": {
     "dependency-check": "^3.3.0",
-    "ejs-lint": "^0.3.0",
     "standard": "^12.0.1"
   },
   "scripts": {
     "start": "node index.js",
-    "test": "standard && dependency-check ./package.json --unused --no-dev --ignore ejs && ejslint **/*.html"
+    "test": "standard && dependency-check ./package.json --unused --no-dev --ignore highlight.js"
   }
 }
