--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "standard && dependency-check ./package.json --unused --no-dev --ignore highlight.js"
+    "test": "standard && dependency-check ./package.json --unused --no-dev --ignore-module highlight.js"
   }
 }
