Fix Markdown links opening in another tab

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pretty-ms": "^5.0.0",
     "pull-stream": "^3.6.12",
     "ssb-client": "^4.7.7",
-    "ssb-markdown": "^5.0.1",
+    "ssb-markdown": "github:ssbc/ssb-markdown#no-target-blank",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9"
   },
