--- a/package.json
+++ b/package.json
@@ -16,10 +16,20 @@
     "open": "^6.3.0",
     "pretty-ms": "^5.0.0",
     "pull-stream": "^3.6.12",
+    "secret-stack": "^6.2.0",
+    "ssb-about": "^2.0.1",
+    "ssb-backlinks": "^0.7.3",
+    "ssb-blobs": "^1.2.1",
     "ssb-client": "^4.7.7",
+    "ssb-config": "^3.3.1",
+    "ssb-db": "^19.3.0",
+    "ssb-gossip": "^1.1.0",
     "ssb-markdown": "github:ssbc/ssb-markdown#no-target-blank",
+    "ssb-master": "^1.0.3",
     "ssb-msgs": "^5.2.0",
-    "ssb-ref": "^2.13.9"
+    "ssb-ref": "^2.13.9",
+    "ssb-replicate": "^1.3.0",
+    "ssb-ws": "^6.2.3"
   },
   "bin": {
     "oasis": "./index.js"
