--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Christian Bundy <christianbundy@fraction.io>",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.1.1",
     "highlight.js": "^9.15.8",
     "hyperaxe": "^1.3.0",
     "koa": "^2.7.0",
@@ -39,10 +40,12 @@
   "devDependencies": {
     "cspell": "^4.0.23",
     "dependency-check": "^3.3.0",
+    "nodemon": "^1.19.1",
     "standard": "^12.0.1"
   },
   "scripts": {
     "start": "node index.js",
+    "dev": "DEBUG=oasis nodemon index.js",
     "test": "test/script.sh"
   }
 }
