--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "DEBUG=oasis nodemon index.js",
-    "test": "test/script.sh"
+    "test": "test/script.sh",
+    "preversion": "test/script.sh"
   }
 }
