Fix syntax highlighter with require-style

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "open": "^6.3.0",
     "pretty-ms": "^5.0.0",
     "pull-stream": "^3.6.12",
+    "require-style": "^1.1.0",
     "secret-stack": "^6.2.0",
     "ssb-about": "^2.0.1",
     "ssb-backlinks": "^0.7.3",
