--- a/package.json
+++ b/package.json
@@ -23,14 +23,26 @@
     "ssb-backlinks": "^0.7.3",
     "ssb-blobs": "^1.2.1",
     "ssb-client": "^4.7.7",
-    "ssb-config": "^3.3.1",
+    "ssb-config": "github:ssbc/ssb-config#auto-config-incoming",
     "ssb-db": "^19.3.0",
+    "ssb-ebt": "^5.6.6",
+    "ssb-friends": "^4.1.4",
     "ssb-gossip": "^1.1.0",
+    "ssb-invite": "^2.1.3",
+    "ssb-links": "^3.0.8",
+    "ssb-local": "^1.0.0",
+    "ssb-logging": "^1.0.0",
     "ssb-markdown": "github:ssbc/ssb-markdown#backcompat",
     "ssb-master": "^1.0.3",
     "ssb-msgs": "^5.2.0",
+    "ssb-no-auth": "^1.0.0",
+    "ssb-onion": "^1.0.0",
+    "ssb-ooo": "^1.3.0",
+    "ssb-plugins": "^1.0.2",
+    "ssb-query": "^2.4.2",
     "ssb-ref": "^2.13.9",
     "ssb-replicate": "^1.3.0",
+    "ssb-unix-socket": "^1.0.0",
     "ssb-ws": "^6.2.3",
     "yargs": "^13.2.4"
   },
