--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Christian Bundy <christianbundy@fraction.io>",
   "license": "ISC",
   "dependencies": {
+    "@fraction/flotilla": "^1.0.1",
     "debug": "^4.1.1",
     "highlight.js": "^9.15.8",
     "hyperaxe": "^1.3.0",
@@ -18,34 +19,13 @@
     "pretty-ms": "^5.0.0",
     "pull-stream": "^3.6.12",
     "require-style": "^1.1.0",
-    "secret-stack": "^6.2.0",
     "sharp": "^0.23.0",
-    "ssb-about": "^2.0.1",
-    "ssb-backlinks": "^0.7.3",
-    "ssb-blobs": "^1.2.1",
     "ssb-client": "^4.7.7",
     "ssb-config": "github:ssbc/ssb-config#auto-config-incoming",
-    "ssb-db": "^19.3.0",
-    "ssb-ebt": "^5.6.6",
-    "ssb-friends": "^4.1.4",
-    "ssb-gossip": "^1.1.0",
-    "ssb-invite": "^2.1.3",
-    "ssb-links": "^3.0.8",
-    "ssb-local": "^1.0.0",
-    "ssb-logging": "^1.0.0",
     "ssb-markdown": "^5.0.2",
-    "ssb-master": "^1.0.3",
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
-    "ssb-no-auth": "^1.0.0",
-    "ssb-onion": "^1.0.0",
-    "ssb-ooo": "^1.3.0",
-    "ssb-plugins": "^1.0.2",
-    "ssb-query": "^2.4.2",
     "ssb-ref": "^2.13.9",
-    "ssb-replicate": "^1.3.0",
-    "ssb-unix-socket": "^1.0.0",
-    "ssb-ws": "^6.2.3",
     "yargs": "^13.2.4"
   },
   "bin": {
@@ -60,9 +40,9 @@
     "standard": "^13.1.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "debug": "nodemon --inspect index.js --debug",
-    "test": "test/script.sh",
-    "preversion": "test/script.sh"
+    "start": "scripts/start",
+    "debug": "scripts/debug",
+    "test": "scripts/test",
+    "preversion": "scripts/test"
   }
 }
