--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sharp": "^0.23.0",
     "ssb-client": "^4.7.7",
     "ssb-config": "github:ssbc/ssb-config#auto-config-incoming",
-    "ssb-markdown": "^5.0.2",
+    "ssb-markdown": "6.0.0",
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
