--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.11",
     "open": "^6.3.0",
     "pretty-ms": "^5.0.0",
+    "pull-paramap": "^1.2.2",
     "pull-stream": "^3.6.12",
     "require-style": "^1.1.0",
     "sharp": "^0.23.0",
