--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Christian Bundy <christianbundy@fraction.io>",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@fraction/base16-css": "^1.0.0",
     "@fraction/flotilla": "^1.0.1",
-    "base16-styles": "github:samme/base16-styles",
     "debug": "^4.1.1",
     "highlight.js": "^9.15.8",
     "hyperaxe": "^1.3.0",
@@ -48,7 +48,7 @@
   "scripts": {
     "start": "node index.js",
     "debug": "nodemon --inspect index.js --debug",
-    "test": "standard --fix && dependency-check ./package.json --unused --no-dev --ignore-module highlight.js --ignore-module base16-styles && cspell --no-summary '**/*.{js,md}' && stylelint --fix src/assets/*.css",
+    "test": "standard --fix && dependency-check ./package.json --unused --no-dev --ignore-module highlight.js --ignore-module @fraction/base16-css && cspell --no-summary '**/*.{js,md}' && stylelint --fix src/assets/*.css",
     "preversion": "npm test"
   }
 }
