--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
-    "ssb-thread-schema": "^1.0.3",
+    "ssb-thread-schema": "1.0.3",
     "yargs": "14.0.0"
   },
   "bin": {
