--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "require-style": "^1.1.0",
     "sharp": "^0.23.0",
     "ssb-client": "^4.7.7",
-    "ssb-config": "github:ssbc/ssb-config#auto-config-incoming",
+    "ssb-config": "^3.4.2",
     "ssb-markdown": "6.0.0",
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
