--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "sharp": "^0.23.0",
     "ssb-client": "^4.7.7",
     "ssb-config": "^3.4.2",
-    "ssb-markdown": "6.0.0",
+    "ssb-markdown": "^6.0.0",
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
     "ssb-thread-schema": "1.0.3",
-    "yargs": "14.0.0"
+    "yargs": "^14.0.0"
   },
   "bin": {
     "oasis": "./index.js"
@@ -38,10 +38,10 @@
   "repository": "git@github.com:fraction/oasis.git",
   "devDependencies": {
     "cspell": "^4.0.23",
-    "dependency-check": "4.1.0",
+    "dependency-check": "^4.1.0",
     "husky": "^3.0.5",
     "nodemon": "^1.19.1",
-    "standard": "14.3.0",
+    "standard": "^14.3.0",
     "stylelint": "^11.0.0",
     "stylelint-config-standard": "^19.0.0"
   },
