--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
-    "open": "^6.3.0",
+    "open": "7.0.0",
     "pretty-ms": "^5.0.0",
     "pull-paramap": "^1.2.2",
     "pull-stream": "^3.6.12",
@@ -29,7 +29,7 @@
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
     "ssb-thread-schema": "^1.1.1",
-    "yargs": "^14.2.1"
+    "yargs": "15.0.0"
   },
   "bin": {
     "oasis": "./index.js"
