--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "debug": "nodemon --inspect index.js --debug",
+    "dev": "nodemon --inspect index.js --debug --no-open",
     "fix": "standard --fix && stylelint --fix src/assets/*.css",
     "test": "standard && dependency-check ./package.json --unused --no-dev --ignore-module highlight.js --ignore-module @fraction/base16-css && cspell --no-summary '**/*.{js,md}' && stylelint src/assets/*.css && tsc --allowJs --resolveJsonModule --lib dom --checkJs --noEmit --skipLibCheck *.js",
     "preversion": "npm test"
