Replace dog-food filter with popular page
Instead of trying to remove ssb-dev content explicitly I'm going to try
to experiment with a "popular" page that count all of the votes in the
past 24 hours and shows the posts with the most votes.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "open": "7.0.0",
     "pretty-ms": "^5.0.0",
     "pull-paramap": "^1.2.2",
+    "pull-sort": "^1.0.2",
     "pull-stream": "^3.6.12",
     "require-style": "^1.1.0",
     "sharp": "^0.23.0",
