--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
     "ssb-thread-schema": "^1.1.1",
-    "yargs": "15.0.0"
+    "yargs": "^15.0.0"
   },
   "bin": {
     "oasis": "./index.js"
@@ -41,9 +41,9 @@
     "cspell": "^4.0.33",
     "dependency-check": "^4.1.0",
     "husky": "^3.0.5",
-    "nodemon": "^1.19.1",
+    "nodemon": "^2.0.2",
     "standard": "^14.3.0",
-    "stylelint": "^11.0.0",
+    "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^3.7.2"
   },
