--- a/contrib/oasis.service
+++ b/contrib/oasis.service
@@ -1,3 +1,8 @@
+# cp oasis.service ~/.config/systemd/user
+# systemctl --user daemon-reload
+# systemctl --user enable oasis
+# systemctl --user start oasis
+
 [Unit]
 Description=Oasis - Friendly Scuttlebutt Web Interface
 Documentation=https://github.com/fraction/oasis
@@ -5,8 +10,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=unicorn
-ExecStart=/usr/bin/node /home/unicorn/.yarn/bin/oasis --host localhost --port 4515
+ExecStart=%s -l -c 'oasis --host localhost --port 4515'
 Restart=on-failure
 
 [Install]
