explain why we wrote the systemd service file

--- a/contrib/oasis.service
+++ b/contrib/oasis.service
@@ -5,6 +5,9 @@ After=network.target
 
 [Service]
 Type=simple
+# %s : run in the user's shell because they might have a custom PATH
+# -l : invoke a login shell to make sure to source .profile, .zprofile, .bash_profile, ...
+# -c : invoke a shell because we'd have to hardcode a path using ExecStart
 ExecStart=%s -l -c 'oasis --host localhost --port 4515 --no-open'
 Restart=on-failure
 
