--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-node_modules/
+*.log*
+.DS_Store
 .nyc_output/
 coverage/
 dist/
+node_modules/
 tmp/
-*.log*
-package-lock.json
-.DS_Store
+yarn.lock
