--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cspell": "^4.0.43",
     "dependency-check": "^4.1.0",
     "husky": "^3.0.5",
+    "mkdirp": "^0.5.1",
     "nodemon": "^2.0.2",
     "standard": "^14.3.0",
     "stylelint": "^12.0.1",
