Change systemd unit to use `default.target`
I was having a problem where I'd start my computer but the script wasn't
restarting audomatically, and after some searching I found this:

https://github.com/systemd/systemd/issues/2690#issuecomment-186973730

It looks like we should be using `default.target` instead of
`multi-user.target`.

--- a/contrib/oasis.service
+++ b/contrib/oasis.service
@@ -12,4 +12,4 @@ ExecStart=%s -l -c 'oasis --host localhost --port 4515 --no-open'
 Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
