--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "cspell": "^4.0.43",
     "dependency-check": "^4.1.0",
-    "electron": "^7.1.7",
     "electron-builder": "^21.2.0",
     "husky": "^3.0.5",
     "mkdirp": "^0.5.1",
@@ -63,12 +62,13 @@
   "build": {
     "appId": "io.fraction.oasis",
     "productName": "Oasis",
+    "electronVersion": "7",
     "linux": {
       "executableName": "oasis",
       "artifactName": "${productName}-${version}.${ext}",
       "category": "Network",
       "target": [
-	"AppImage",
+        "AppImage",
         "snap"
       ]
     },
