--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "dev": "nodemon --inspect src/index.js --debug --no-open",
     "fix": "standard --fix && stylelint --fix src/assets/*.css",
     "start": "node src/index.js",
-    "test": "standard && dependency-check ./package.json --unused --no-dev --ignore-module highlight.js --ignore-module patch-package --ignore-module @fraction/base16-css && cspell --no-summary '**/*.{js,md}' && stylelint src/assets/*.css && tsc --allowJs --resolveJsonModule --lib dom --checkJs --noEmit --skipLibCheck src/index.js",
-    "preversion": "npm test",
-    "postinstall": "patch-package"
+    "test": "standard && dependency-check ./package.json --unused --no-dev --i highlight.js --i @fraction/base16-css -i multiserver && cspell --no-summary '**/*.{js,md}' && stylelint src/assets/*.css && tsc --allowJs --resolveJsonModule --lib dom --checkJs --noEmit --skipLibCheck src/index.js",
+    "preversion": "npm test"
   },
   "dependencies": {
     "@fraction/base16-css": "^1.1.0",
@@ -29,15 +28,15 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
+    "multiserver": "github:ssbc/multiserver#multi-meta",
     "open": "7.0.0",
-    "patch-package": "^6.2.0",
     "pretty-ms": "^5.0.0",
     "pull-paramap": "^1.2.2",
     "pull-sort": "^1.0.2",
     "pull-stream": "^3.6.12",
     "require-style": "^1.1.0",
     "ssb-client": "^4.7.7",
-    "ssb-config": "^3.4.3",
+    "ssb-config": "github:ssbc/ssb-config#multiserver-fix",
     "ssb-markdown": "^6.0.2",
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
