Make Travis faster by removing double-build
Problem: Travis builds PRs and branches, which means that local branches
get built twice (!).

Solution: Travis should only build `master`, and maybe tags.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ os:
   - osx
   - windows
 
-# This keeps Yarn from hanging the build.
-env:
-  - YARN_GPG=no
+# Don't build arbitrary branches, just pull requests + master + semver tags.
+branches:
+  only:
+  - master
+  - "/^v\\d+\\.\\d+\\.\\d+$/"
