--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
+    "ssb-tangle": "^1.0.1",
     "ssb-thread-schema": "^1.1.1",
     "yargs": "^15.0.0"
   },
