--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@fraction/base16-css": "^1.1.0",
-    "@fraction/flotilla": "3.0.0",
+    "@fraction/flotilla": "^3.0.1",
     "debug": "^4.1.1",
     "highlight.js": "^9.18.0",
     "hyperaxe": "^1.3.0",
@@ -41,7 +41,7 @@
     "sharp": "^0.23.0",
     "ssb-client": "^4.8.0",
     "ssb-config": "^3.4.3",
-    "ssb-markdown": "^6.0.2",
+    "ssb-markdown": "^6.0.3",
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
