--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "^4.1.1",
     "highlight.js": "^9.18.0",
     "hyperaxe": "^1.3.0",
+    "is-svg": "^4.2.1",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-mount": "^4.0.0",
