--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fraction/base16-css": "^1.1.0",
     "@fraction/flotilla": "^4.0.0",
     "debug": "^4.1.1",
+    "env-paths": "^2.2.0",
     "highlight.js": "^9.18.1",
     "hyperaxe": "^1.3.0",
     "is-svg": "^4.2.1",
