--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
+    "markdown-it": "^8.4.2",
     "open": "7.0.0",
     "pretty-ms": "^5.0.0",
     "pull-paramap": "^1.2.2",
