Resolve Travis CI + Windows EOL bug
Problem: Travis CI is converting our EOL characters and it's causing
problems when we're parsing with Prettier.

Solution: Disable auto-conversion.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ branches:
   only:
     - master
     - "/^v\\d+\\.\\d+\\.\\d+$/"
+
+# Never convert EOL characters.
+# https://github.com/prettier/prettier/issues/7853
+git:
+  autocrlf: input
