Add TypeScript definitions for better guardrails
Problem: We have TypeScript enabled on the project but have been missing
lots of definition files, so there are like 500 errors when you enable
`--noImplicitAny`.

Solution: Add definitions and fix the bugs that they point out. This
reduces the number of errors with `--noImplicitAny` to 285.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,19 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/highlight.js": "^9.12.3",
+    "@types/koa": "^2.11.2",
+    "@types/koa-mount": "^4.0.0",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa__router": "^8.0.2",
+    "@types/lodash": "^4.14.149",
+    "@types/markdown-it": "^0.0.9",
+    "@types/mkdirp": "^1.0.0",
+    "@types/nodemon": "^1.19.0",
+    "@types/pull-stream": "^3.6.0",
+    "@types/sharp": "^0.23.1",
+    "@types/yargs": "^15.0.4",
     "changelog-version": "^1.0.1",
     "common-good": "^2.0.3",
     "husky": "^4.0.0",
