--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "nodemon --inspect src/index.js --debug --no-open",
     "fix": "common-good fix",
     "start": "node src/index.js",
-    "test": "common-good check --dependency-check-suffix '-i husky -i changelog-version -i mkdirp -i nodemon -i stylelint-config-recommended'",
+    "test": "common-good check --dependency-check-suffix '-i changelog-version -i mkdirp -i nodemon -i stylelint-config-recommended'",
     "preversion": "npm test",
     "version": "changelog-version && git add CHANGELOG.md"
   },
@@ -55,7 +55,6 @@
   "devDependencies": {
     "changelog-version": "^1.0.1",
     "common-good": "^1.1.20",
-    "husky": "^3.0.5",
     "mkdirp": "^0.5.1",
     "nodemon": "^2.0.2",
     "stylelint-config-recommended": "^3.0.0"
