--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "node src/index.js",
     "test": "common-good check --dependency-check-suffix '-i changelog-version -i mkdirp -i nodemon -i stylelint-config-recommended'",
     "preversion": "npm test",
-    "version": "changelog-version && git add CHANGELOG.md"
+    "version": "mv docs/CHANGELOG.md ./ && changelog-version && mv CHANGELOG.md docs/ && git add CHANGELOG.md"
   },
   "dependencies": {
     "@fraction/base16-css": "^1.1.0",
