--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@fraction/base16-css": "^1.1.0",
-    "@fraction/flotilla": "^4.0.1",
+    "@fraction/flotilla": "Powersource/flotilla#add-meme-2",
     "@koa/router": "^8.0.0",
     "debug": "^4.1.1",
     "env-paths": "^2.2.0",
