--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ssb-onion": "^1.0.0",
     "ssb-ooo": "^1.3.1",
     "ssb-plugins": "^1.0.2",
+    "ssb-private1": "^1.0.1",
     "ssb-query": "^2.4.3",
     "ssb-ref": "^2.13.9",
     "ssb-replicate": "^1.3.0",
