Fir common-good call
Use `test` instead of `check`.
This was changed in common-good 3.0.
See the [commit](https://github.com/christianbundy/common-good/commit/3dc492ea7dc58714e178366a2dda1a3704fbf2b8)

Also added a pretty aggressive ignore-list for dev-dependencies for depcheck.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "nodemon --inspect src/index.js --debug --no-open",
     "fix": "common-good fix",
     "start": "node src/index.js",
-    "test": "tap --timeout 240 && common-good check --dependency-check-suffix '-i changelog-version -i mkdirp -i nodemon -i stylelint-config-recommended -i husky'",
+    "test": "tap --timeout 240 && common-good test",
     "preversion": "npm test",
     "version": "mv docs/CHANGELOG.md ./ && changelog-version && mv CHANGELOG.md docs/ && git add docs/CHANGELOG.md"
   },
