--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "pull-sort": "^1.0.2",
     "pull-stream": "^3.6.12",
     "require-style": "^1.1.0",
-    "secret-stack": "^6.3.0",
+    "secret-stack": "^6.4.1",
     "sharp": "^0.28.0",
     "ssb-about": "^2.0.1",
     "ssb-backlinks": "^2.1.1",
@@ -53,7 +53,7 @@
     "ssb-config": "^3.4.4",
     "ssb-conn": "^5.0.0",
     "ssb-db": "^20.3.0",
-    "ssb-ebt": "^7.0.1",
+    "ssb-ebt": "^8.1.1",
     "ssb-friends": "^5.0.0",
     "ssb-invite": "^2.1.6",
     "ssb-keys": "^8.0.0",
@@ -71,7 +71,7 @@
     "ssb-private1": "^1.0.1",
     "ssb-query": "^2.4.5",
     "ssb-ref": "^2.13.9",
-    "ssb-replicate": "^1.3.0",
+    "ssb-replication-scheduler": "2.0.2",
     "ssb-room": "^1.3.0",
     "ssb-search": "^1.3.0",
     "ssb-tangle": "^1.0.1",
